--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,8 @@
         </activity>
         <activity android:name=".GameActivity" />
         <activity android:name=".AlarmActivity" />
-        <activity android:name=".HistoryActivity"></activity>
+        <activity android:name=".HistoryActivity" />
+        <activity android:name=".CategoryActivity"></activity>
     </application>
 
 </manifest>
