--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,4 +30,5 @@ dependencies {
     compile 'com.android.support:cardview-v7:25.1.0'
     compile 'com.android.support:recyclerview-v7:25.1.0'
     compile 'de.hdodenhof:circleimageview:1.3.0'
+    compile 'com.github.zagum:SpeechRecognitionView:1.0.2'
 }
